--- a/styles1.css
+++ b/styles1.css
@@ -1,24 +1,17 @@
-
-  @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,300&family=Poppins&display=swap');
-
-
 body{
     background-image: url(https://kq-storage.s3.ap-south-1.amazonaws.com/Github/astronaut/sky-moon-bg%5B1%5D.png);
     height: 100vh;
     width: 100vw;
     background-size: 100% 100%;
     overflow: hidden;
-    font-family: 'Lato', sans-serif;
-    border-radius: 5px;
-
+}
 
 #astronaut-1{
     width: 500px;
-    position: absolute;
-    top: 5%;
+    position:absolute;
+    top:5%;
     left: 5%;
     animation: floating 5s infinite;
-    
 }
 
 @keyframes floating{
@@ -26,18 +19,25 @@ body{
         transform: translateY(0px);
     }
     50%{
-        transform: translateY(50px);
+        transform: translateY(30px);
     }
 }
 
 #astronaut-2{
     width: 500px;
-    position: absolute;
-    top: 5%;
-    left: 5%;
+    position:absolute;
+    top:30%;
+    left: 30%;
     animation: floating 5s infinite;
-    margin-left: 25%;
-    margin-top: 150px;
+}
+
+@keyframes floating{
+    0%{
+        transform: translateY(0px);
+    }
+    50%{
+        transform: translateY(30px);
+    }
 }
 
 form{
@@ -45,29 +45,25 @@ form{
     top: 15%;
     left: 56%;
     width: 450px;
-    padding: 0 75px;
+    padding: 0 20px;
     background-color: white;
-    margin-right: 40px;
-}
-label{
-    display: block;
+    border-radius: 5px;
 }
 
 .block-display{
-    display: block;
+    display:block;
 }
 
 label{
-    font-size: 16px;
-    margin: 20px 0 40px 0;
+  font-size: 16px;
+  margin: 20px 0 4px 0;
 }
 
 h1{
-    font-size: 26 px;
+    font-size: 26px;
     width: 280px;
     text-align: center;
     margin: 20px auto;
-    
 }
 
 input[type="text"], input[type="email"],select{
@@ -75,7 +71,6 @@ input[type="text"], input[type="email"],select{
     height: 40px;
     border: 1px solid black;
     padding: 0 5px;
-    position: relative;
 }
 
 input[type="submit"]{
@@ -84,9 +79,6 @@ input[type="submit"]{
     padding: 15px 20px;
     border: none;
     margin: 40px auto;
-    position: relative;
     border-radius: 20px;
     
-}
-
 }
