--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500&family=Poppins:wght@300&display=swap');
+
 body{
     background-image: url(https://kq-storage.s3.ap-south-1.amazonaws.com/Github/astronaut/sky-moon-bg%5B1%5D.png);
     height: 100vh;
     width: 100vw;
     background-size: 100% 100%;
     overflow: hidden;
+    font-family: poppins, sans serif;
 }
 
 #astronaut-1{
@@ -43,9 +46,9 @@ body{
 form{
     position: absolute;
     top: 15%;
-    left: 56%;
-    width: 450px;
-    padding: 0 20px;
+    left: 64%;
+    width: 311px;
+    padding: 0 75px;
     background-color: white;
     border-radius: 5px;
 }
